src/main/resources/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grupo5-service
spec:
  type: ClusterIP
  selector:
    app: grupo5
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
